force-app/main/default/objects/Page__c/Page__c.object-meta.xml
<CustomObject>
    <label>Page</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>