force-app/main/default/objects/Page__c/fields/Cache_expires__c.field-meta.xml
<CustomField>
    <fullName>Cache_expires__c</fullName>
    <defaultValue>600</defaultValue>
    <description>This field will keep the number of seconds this page stays in the cache on the Content Delivery Network.</description>
    <inlineHelpText>This field will keep the number of seconds this page stays in the cache on the Content Delivery Network.</inlineHelpText>
    <label>Cache expires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>