force-app/main/default/objects/Page__c/fields/FriendlyUrl__c.field-meta.xml
<CustomField>
    <fullName>FriendlyUrl__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type a friendly url here. Do not start with a &#39;/&#39;</inlineHelpText>
    <label>FriendlyUrl</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>