force-app/main/default/objects/Page__c/fields/Home_Page__c.field-meta.xml
<CustomField>
    <fullName>Home_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to set the page as the home page for the site this page is in.</description>
    <inlineHelpText>Check this box to set the page as the home page for the site this page is in.</inlineHelpText>
    <label>Home Page</label>
    <type>Checkbox</type>
</CustomField>