force-app/main/default/objects/Page__c/fields/PageTemplate__c.field-meta.xml
<CustomField>
    <fullName>PageTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PageTemplate</label>
    <referenceTo>PageTemplate__c</referenceTo>
    <relationshipLabel>Pages</relationshipLabel>
    <relationshipName>Pages</relationshipName>
    <type>Lookup</type>
</CustomField>