force-app/main/default/objects/Page__c/fields/PageTemplateVFPage__c.field-meta.xml
<CustomField>
    <fullName>PageTemplateVFPage__c</fullName>
    <formula>PageTemplate__r.VisualForce_Page_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PageTemplateVFPage</label>
    <type>Text</type>
</CustomField>