force-app/main/default/objects/Page__c/validationRules/FriendlyUrlsFormat.validationRule-meta.xml
<ValidationRule>
    <fullName>FriendlyUrlsFormat</fullName>
    <active>true</active>
    <description>Friendly urls can not start with /</description>
    <errorConditionFormula>IF( LEFT( FriendlyUrl__c , 1) == &#39;/&#39; , true, false)</errorConditionFormula>
    <errorDisplayField>FriendlyUrl__c</errorDisplayField>
    <errorMessage>Do not start a friendly url with a &#39;/&#39;</errorMessage>
</ValidationRule>