force-app/main/default/objects/Page__c/validationRules/Page_Folder_can_not_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Page_Folder_can_not_be_empty</fullName>
    <active>true</active>
    <description>Require parent Folder reference on a page.</description>
    <errorConditionFormula>ISBLANK(Folder__c)</errorConditionFormula>
    <errorDisplayField>Folder__c</errorDisplayField>
    <errorMessage>A page needs to have a parent Folder.</errorMessage>
</ValidationRule>